fix(styles): overlapping/duplicate align start rule

--- a/projects/styles/src/layout.css
+++ b/projects/styles/src/layout.css
@@ -81,7 +81,6 @@
     /* Vertical Layout */
     &[nve-layout~='column'] {
       flex-direction: column;
-      align-items: flex-start;
       justify-content: flex-start;
 
       &[nve-layout~='align:left'] {
